<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp">

        <LinearLayout
            android:id="@+id/activity_event_creation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="uk.co.univents.univents.EventCreation"
            android:orientation="vertical"
            android:weightSum="1">

        <ImageView
            android:layout_width="117dp"
            android:layout_height="115dp"
            android:background="@android:color/transparent"
            android:onClick="goToHome"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView2"
            android:adjustViewBounds="false"
            android:cropToPadding="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event"
            android:textSize="24sp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/EventCreationTitle"
            android:ems="10"
            android:id="@+id/eventCreationTitle"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/EventCreationLocation"
            android:ems="10"
            android:id="@+id/EventLocation"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT START DATE"
            android:onClick="startDatePicker"
            android:id="@+id/btn_start_date"
        />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/EventStartDate"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="yy-mm-dd" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT START TIME"
            android:id="@+id/btn_start_time"
            android:onClick="startTimePicker" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/EventStartTime"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="hh:mm" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT END DATE"
            android:onClick="endDatePicker"
            android:id="@+id/btn_end_date"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/EventEndDate"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="yy-mm-dd" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT END TIME"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/btn_end_time"
            android:onClick="endTimePicker" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/EventEndTime"
            android:text="hh:mm" />

        <CheckBox
            android:text="Private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/visibility"
            android:checked="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/EventCreationMaxNum"
            android:ems="10"
            android:id="@+id/maxNumParticipantsField"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invitees"
            android:textSize="24sp"
            android:id="@+id/textView2" />

        <ListView
            android:id = "@+id/friend_select"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:background="@color/colorList"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/EventCreationNotes"
            android:ems="10"
            android:id="@+id/EventNotes"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createNewEvent"
            android:text="@string/EventCreationButton"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="@color/common_google_signin_btn_text_dark_default">

        </Button>

        </LinearLayout>
        </ScrollView>
</RelativeLayout>